# SO_challenge_6_integer_counting

./: README.md  main.py  pyproject.toml
