[project]
name = "6-integer-counting"
version = "0.1.0"
description = ""
authors = [
    {name = "Geneviève Le Houx",email = "gnvvlhx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
